# sliqsys

./: .gitignore  CMakeLists.txt  README.md
include/: bddSystem.h  qCkt.h
src/: gateOpe.cpp  misc.cpp  propCheck.cpp  qasmParser.cpp
